Add sun.awt exports (#76)
See Suwayomi/Suwayomi-Server#1675